updated image name

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: default
 <!DOCTYPE html>
 <html>
 <body>
-<img src="images/logo.png" alt="Logo showing letters E and K.">
+<img src="images/eklogoicon.png" alt="Logo showing letters E and K.">
 <h1>Engineer, Problem Solver</h1>
 </body>
 </html>
