Added page meta data and favicon

--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
 <!DOCTYPE html>
+<head>
+<meta title="Ethan Klein">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="shortcut icon" href="images/eklogoicon.png" type="image/x-icon">
+</head>
 <html>
 <body>
 <img src="images/eklogoicon.png" alt="Logo showing letters E and K.">
