Added favicon icon file and edited index to properly path

--- a/index.html
+++ b/index.html
@@ -2,11 +2,10 @@
 <head>
 <meta title="Ethan Klein">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="shortcut icon" href="images/eklogoicon.png" type="image/x-icon">
+<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 </head>
 <html>
 <body>
-<img src="images/eklogoicon.png" alt="Logo showing letters E and K.">
 <h1>Engineer, Problem Solver</h1>
 </body>
 </html>
