--- a/index.html
+++ b/index.html
@@ -2,14 +2,16 @@
 <head>
 <title>Ethan Klein</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+<link rel="apple-touch-icon" sizes="180x180" href="images/Favicon/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="images/Favicon/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="images/Favicon/favicon-16x16.png">
 <link rel="stylesheet" href="styles.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source Code Pro">
 </head>
 <html>
 <body>
 <div class="toppage">
-<img src="images/eklogoicon.png" alt="Logo showing letters E and K." style="min-width: 100px;">
+<img src="images/EK_Logo_WithGlow.png" alt="Logo showing letters E and K." style="min-width: 100px;">
 <h1>Engineer, Problem Solver</h1>
 </div>
 <div class="bio">
