--- a/index.html
+++ b/index.html
@@ -16,13 +16,12 @@
 </div>
 <div class="bio">
 <h2>My name is Ethan Klein.</h2>
-<p>I am a <b>Mechanical and Electrical Engineer</b>. I currently work for a lithium-ion battery manufacturer.</p>
-<p>My passion is the <b>Earth</b>. I want to employ my skills and talents to create the <b>green energy of the future</b>.</p>
+<p>I am a <b>Mechanical and Electrical Engineer</b>. I design automotive lithium-ion battery systems.</p>
+<p>My passion is the <b>Earth</b>. I want to employ my skills and talents to create the <b>green energy</b> of the future.</p>
 </div>
 <div class="sayhello">
 <h2>Say Hello</h2>
 <p style="font-size:calc((1.5 - 1) * 1.2vw + 1rem)">Let's do something great! Reach out on <a href="https://www.linkedin.com/in/ethanmklein/">LinkedIn</a>.</p>
-<img src="images/headshot.jpg" alt="headshot photo of Ethan Klein">
 <a href="https://www.linkedin.com/in/ethanmklein/"><img src="images/linkedin.png" alt="linked in logo with link to profile" style="width:50px;padding-bottom:50px;"></a>
 </div>
 </body>
