Added Github link at bottom

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 <h2>Say Hello</h2>
 <p style="font-size:calc((1.5 - 1) * 1.2vw + 1rem)">Let's do something great! Reach out on <a href="https://www.linkedin.com/in/ethanmklein/">LinkedIn</a>.</p>
 <a href="https://www.linkedin.com/in/ethanmklein/"><img src="images/linkedin.png" alt="linked in logo with link to profile" style="width:50px;padding-bottom:50px;"></a>
+<p> Built with <a href="https://github.com/emklein/emklein.github.io">Github</a></p>
 </div>
 </body>
 </html>
