Visual img/color update
Removed background photo and updated to earth toned color pallet. Also updated layout structure.

--- a/index.html
+++ b/index.html
@@ -1,29 +1,41 @@
 <!DOCTYPE html>
-<head>
-<title>Ethan Klein</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="apple-touch-icon" sizes="180x180" href="images/Favicon/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="images/Favicon/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="images/Favicon/favicon-16x16.png">
-<link rel="stylesheet" href="styles.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source Code Pro">
-</head>
 <html>
-<body>
-<div class="toppage">
-<img src="images/EK_Logo_WithGlow.png" alt="Logo showing letters E and K." style="min-width: 100px;">
-<h1>Engineer, Problem Solver</h1>
-</div>
-<div class="bio">
-<h2>My name is Ethan Klein.</h2>
-<p>I am a <b>Mechanical and Electrical Engineer</b>. I design automotive lithium-ion battery systems.</p>
-<p>My passion is the <b>Earth</b>. I want to employ my skills and talents to create the <b>green energy</b> of the future.</p>
-</div>
-<div class="sayhello">
-<h2>Say Hello</h2>
-<p style="font-size:calc((1.5 - 1) * 1.2vw + 1rem)">Let's do something great! Reach out on <a href="https://www.linkedin.com/in/ethanmklein/">LinkedIn</a>.</p>
-<a href="https://www.linkedin.com/in/ethanmklein/"><img src="images/linkedin.png" alt="linked in logo with link to profile" style="width:50px;padding-bottom:50px;"></a>
-<p> Built with <a href="https://github.com/emklein/emklein.github.io">Github</a></p>
-</div>
-</body>
+    <head>
+        <title>Ethan Klein</title>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="apple-touch-icon" sizes="180x180" href="images/Favicon/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="images/Favicon/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="images/Favicon/favicon-16x16.png">
+        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source Code Pro">
+    </head>
+    <body>
+        <div class="row">
+            <div class="col-12">
+                <div class="toppage">
+                    <img src="images/EK_Logo_WithGlow.png" alt="Logo showing letters E and K." style="min-width: 100px;">
+                    <h1>Engineer, Problem Solver</h1>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12">
+                <div class="bio">
+                    <h2>My name is Ethan Klein.</h2>
+                    <p>I am a <b>Mechanical and Electrical Engineer</b>. I design automotive lithium-ion battery systems.</p>
+                    <p>My passion is the <b>Earth</b>. I employ my skills and talents to create the <b>green energy</b> of the future.</p>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div clas="col-12">
+                <div class="sayhello">
+                    <h2>Say Hello</h2>
+                    <p>Let's do something great! Reach out on <a href="https://www.linkedin.com/in/ethanmklein/">LinkedIn</a>.</p>    
+                    <p> Built by me with <a href="https://github.com/emklein/emklein.github.io">Github</a>.</p>
+                </div>
+            </div>
+        </div>
+    </body>
 </html>
